--- a/app/build.gradle
+++ b/app/build.gradle
@@ -65,11 +65,10 @@ dependencies {
     debugImplementation "androidx.compose.ui:ui-tooling:$compose_version"
     debugImplementation "androidx.compose.ui:ui-test-manifest:$compose_version"
 
-
+    //dagger - hilt
     implementation("com.google.dagger:hilt-android:2.38.1")
     implementation("androidx.hilt:hilt-navigation-compose:1.0.0")
     kapt("com.google.dagger:hilt-android-compiler:2.38.1")
-
 
     // Retrofit
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
@@ -87,6 +86,8 @@ dependencies {
 
     implementation "com.google.accompanist:accompanist-insets-ui:0.24.7-alpha"
 
+    // Coil
+    implementation "io.coil-kt:coil-compose:1.3.2"
 }
 kapt {
     correctErrorTypes = true
