--- a/app/build.gradle
+++ b/app/build.gradle
@@ -88,6 +88,9 @@ dependencies {
 
     // Coil
     implementation "io.coil-kt:coil-compose:1.3.2"
+
+
+    implementation "androidx.compose.runtime:runtime-livedata:$compose_version"
 }
 kapt {
     correctErrorTypes = true
