--- a/app/build.gradle
+++ b/app/build.gradle
@@ -91,6 +91,10 @@ dependencies {
 
 
     implementation "androidx.compose.runtime:runtime-livedata:$compose_version"
+
+
+    //DataStore Preferences
+    implementation "androidx.datastore:datastore-preferences:1.0.0"
 }
 kapt {
     correctErrorTypes = true
