--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,7 +62,7 @@ dependencies {
     androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_version"
     debugImplementation "androidx.compose.ui:ui-tooling:$compose_version"
     debugImplementation "androidx.compose.ui:ui-test-manifest:$compose_version"
-    implementation("androidx.compose.compiler:compiler:1.3.1")
+    implementation("androidx.compose.compiler:compiler:1.3.2")
 
     //dagger - hilt
     implementation 'com.google.dagger:hilt-android:2.43.2'
@@ -95,6 +95,9 @@ dependencies {
 
     //DataStore Preferences
     implementation "androidx.datastore:datastore-preferences:1.0.0"
+
+    //accompanist
+    implementation "com.google.accompanist:accompanist-permissions:0.26.5-rc"
 }
 kapt {
     correctErrorTypes = true
