--- a/build.gradle
+++ b/build.gradle
@@ -1,12 +1,13 @@
 buildscript {
     ext {
-        compose_version = '1.3.0-beta03'
+        compose_version = '1.3.0-rc01'
         kotlin_version = "1.7.10"
     }
     buildscript {
         dependencies {}
     }
     repositories {
+        mavenCentral()
         google()
     }
 }// Top-level build file where you can add configuration options common to all sub-projects/modules.
