--- a/app/build.gradle
+++ b/app/build.gradle
@@ -95,6 +95,10 @@ dependencies {
 
     //DataStore Preferences
     implementation "androidx.datastore:datastore-preferences:1.0.0"
+
+    //MediaShare
+    implementation("androidx.media:media:1.6.0")
+
 }
 kapt {
     correctErrorTypes = true
