--- a/app/build.gradle
+++ b/app/build.gradle
@@ -108,6 +108,15 @@ dependencies {
     implementation 'androidx.media3:media3-session:1.0.0-beta02'
     implementation 'com.google.android.exoplayer:exoplayer:2.18.1'
 
+
+    def room_version = "2.4.3"
+
+    implementation("androidx.room:room-runtime:$room_version")
+    annotationProcessor("androidx.room:room-compiler:$room_version")
+    implementation("androidx.room:room-ktx:$room_version")
+    // To use Kotlin annotation processing tool (kapt)
+    kapt("androidx.room:room-compiler:$room_version")
+
 }
 kapt {
     correctErrorTypes = true
