--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,6 +49,7 @@ android {
 }
 
 dependencies {
+    implementation 'com.google.firebase:firebase-crashlytics-buildtools:2.8.1'
     def nav_version = "2.5.2"
     implementation("androidx.navigation:navigation-compose:$nav_version")
     implementation 'androidx.core:core-ktx:1.9.0'
